k8s-manifest/kta/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kta-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kta-webapp
  template:
    metadata:
      labels:
        app: kta-webapp
    spec:
      containers:
      - name: app
        image: mrupgrade/kta-webapp-flask:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /log/
          name: log
      volumes:
      - name: log
        persistentVolumeClaim:
          claimName: "kta-log-vc"


---
apiVersion: v1
kind: Service
metadata:
  name: kta-webapp
spec:
  selector:
    app: kta-webapp
  type: ClusterIP
  ports:
  - protocol: "TCP"
    # Port accessible inside cluster
    port: 8080
    # Port to forward to inside the pod
    targetPort: 8080
    # Port accessible outside cluster
