k8s-manifest/kta/db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kta-db
spec:
  selector:
    matchLabels:
      app: kta
      cmp: db
  template:
    metadata:
      labels:
        app: kta
        cmp: db
    spec:
      containers:
      - name: kta-db
        image: postgres:9.6
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data/
          name: pgdata
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: "kta-db-vc"


---
apiVersion: v1
kind: Service
metadata:
  name: kta-db
spec:
  selector:
    app: kta
    cmp: db
  ports:
  - protocol: "TCP"
    name: db-uri
    # Port accessible inside cluster
    port: 10081
    # Port to forward to inside the pod
    targetPort: 5432

  type: NodePort
