k8s-manifest/kta/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kta
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kta-webapp
          servicePort: 8080
